Add R script for CTT simulation to chapter 1

--- a/01-ClassicTestTheory.Rmd
+++ b/01-ClassicTestTheory.Rmd
@@ -16,7 +16,7 @@ X = T + E
 $$
 where $X$ is the **observed score**, $T$ is the **true score**, which is unknown, and $E$ is the **error**
 
-To demonstrate this let's assume we have the following data,
+To demonstrate this let's assume we have the following data (R script is at end of this chapter),
 
 ```{r}
 source("code/simulate_CTTdata.R")
@@ -245,3 +245,44 @@ dfit$generalizability
 
 For more information of G theory, see @raykov2011introduction. 
 For an example using the R package `lavaan` with G theory, see @Jorgensen2021Howestimateabsolute.
+
+## R Scripts
+
+### Simulating CTT data
+
+```{r}
+#************************************************************************
+# Title: simulate_CTTdata
+# Author: William Murrah
+# Description: Simulate data to demonstrate CTT and reliability
+# Created: Monday, 09 August 2021
+# R version: R version 4.1.0 (2021-05-18)
+# Project(working) directory: /Users/wmm0017/Projects/Courses/AdvancedMeasurementTheoryNotebook
+#************************************************************************
+
+simx <- function(truescore, sigmax = 1) {
+  x <- rnorm(18, truescore, sigmax)
+  return(round(x))
+}
+id <- rep(1:6, each = 3)
+Tau <- rep(rep(4:6, each = 3),2)
+set.seed(20210805)
+CTTdata <- data.frame(
+  id = id,
+  time = rep(1:3, 6),
+  x1 = simx(Tau),
+  x2 = simx(Tau),
+  x3 = simx(Tau),
+  x4 = simx(Tau),
+  x5 = simx(Tau),
+  x6 = simx(Tau),
+  x7 = simx(Tau),
+  x8 = simx(Tau),
+  x9 = simx(Tau),
+  x10 = simx(Tau),
+  Tau = Tau
+)
+rm(id, Tau, simx)
+
+```
+
