Add How to Use Notebook video link

--- a/docs/AdvancedMeasurementTheoryNotebook.tex
+++ b/docs/AdvancedMeasurementTheoryNotebook.tex
@@ -200,6 +200,14 @@ R's functions are stored in packages.
 While base R has a long list of very useful functions, to fully realize the power of R you will have to use additional packages.
 So, learning how to \textbf{install} packages (downloading from the web to your computer) and \textbf{loading} packages (making the package's functions accessible to your current R session) are important skills to master.
 
+\hypertarget{how-to-use-these-notes}{%
+\section*{How To Use These Notes}\label{how-to-use-these-notes}}
+\addcontentsline{toc}{section}{How To Use These Notes}
+
+Before going further, it may be helpful to watch the following video about how to use the code in this notebook with Rstudio:
+
+\href{https://auburn.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=13acb849-902a-45c7-bc4e-ad870153fcae}{How to Use RStudio with this Notebook}
+
 \hypertarget{CCT}{%
 \chapter{Classic Test Theory}\label{CCT}}
 
