Add generalizability chapter stub

--- a/book.bib
+++ b/book.bib
@@ -62,3 +62,11 @@
   owner     = {wmmurrah},
   publisher = {Informa {UK} Limited},
 }
+
+@Book{Desjardins2018Handbookeducationalmeasurement,
+  author    = {Desjardins, Christopher D. and Bulut, Okan},
+  publisher = {CRC Press},
+  title     = {Handbook of educational measurement and psychometrics using {R}},
+  year      = {2018},
+  owner     = {wmmurrah},
+}
